# usher

./: .clang-format  .gitignore  ARTIC2UShER.py  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Fasta2UShER.py  LICENSE  README.md  collect_stat.pl  compareVCF.pl  gdb_inst  hostfile  installCentOS.sh  installMacOS.sh  installUbuntu.sh  mutation_detailed.proto  parsimony.proto  parsimony_pb2.py  patch-protobuf.sh  ref.fasta  run.sh  taxodium.proto  tbb2019_20191006oss_mac.tgz  test.gff  test_refine.sh  test_refine_local.sh  translate_test.nh  translate_test.pb  translate_test.vcf  vcfNormalizeGt.pl  version.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml  version.yml
install/: Dockerfile  environment.yml  installCentOS.sh  installMacOS.sh  installUbuntu.sh  matoptimize-mpi-env.yml
scripts/: Fasta2UShER.py  Fasta2UShER_2.py  faToVcf  faToVcf (4)  plot_recombs.py  sequenceAnalyzer.py  test_refine.sh  test_refine_local.sh
scripts/recombination/: Dockerfile  README.md  process.py  run.py  run_ripples_filtration.sh
src/: Fitch_Sankoff.cpp  Fitch_Sankoff.hpp  Instrumentor.h  Mutation_Collection.cpp  NNI.cpp  Twice_Bloom_Filter.hpp  check_samples.cpp  check_samples.hpp  compareVCF.cpp  compareVCF.py  get_possible_muts_at_tip.cpp  import_vcf_fast.cpp  matToVcf.cpp  matUtils.cpp  merge.cpp  mutation_annotated_tree.cpp  mutation_annotated_tree.hpp  priority_conflict_resolver.cpp  serializer_check.cpp  tree.cpp  tree.hpp  tree_rearrangement.cpp  tree_rearrangement.hpp  usher.cpp  usher_common.cpp  usher_common.hpp  usher_graph.hpp  usher_mapper.cpp  usher_old.cpp  usher_server.cpp  version.hpp.in
src/check_samples_place/: check_samples.cpp  import_vcf.cpp  main.cpp
src/matOptimize/: Fitch_Sankoff.cpp  Fitch_Sankoff.hpp  Mutation_Collection.cpp  Twice_Bloom_Filter.hpp  VCF_load_tree.cpp  breakpoints  check_samples.cpp  check_samples.hpp  condense.cpp  detailed_mutation_load_store.hpp  detailed_mutations_load.cpp  detailed_mutations_load_store.cpp  detailed_mutations_parallel_store.cpp  detailed_mutations_store.cpp  dump_node_list.cpp  import_vcf.hpp  import_vcf_fast.cpp  main.cpp  main_helper.cpp  main_load_tree.cpp  mutation_annotated_tree.cpp  mutation_annotated_tree.hpp  mutation_annotated_tree_load_store.cpp  mutation_annotated_tree_node.cpp  mutation_annotated_tree_nuc_util.cpp  optimize_inner_loop.cpp  optimize_tree.cpp  output_final_protobuf.cpp  possible_change.cpp  priority_conflict_resolver.cpp  priority_conflict_resolver.hpp  priority_conflict_resolver_cross_only.cpp  range_tree.cpp  reassign_states.cpp  rename_fasta.cpp  serializer_test.cpp  stack_allocator.hpp  transpose_vcf.cpp  transpose_vcf.hpp  transpose_vcf_decode_test.cpp  (+6 more)
src/matOptimizeOld/: main.cpp  optimize.hpp
src/matUtils/: README.md  annotate.cpp  annotate.hpp  common.hpp  convert.cpp  convert.hpp  describe.cpp  describe.hpp  extract.cpp  extract.hpp  filter.cpp  filter.hpp  fix.cpp  fix.hpp  introduce.cpp  introduce.hpp  main.cpp  mask.cpp  mask.hpp  maskselect.cpp  maskselect.hpp  matUtils.cpp  merge.cpp  merge.hpp  nlohmann_json.hpp  optimize.cpp  optimize.hpp  prune.cpp  prune.hpp  select.cpp  select.hpp  summary.cpp  summary.hpp  taxodium.cpp  taxodium.hpp  translate.cpp  translate.hpp  translate_example.metadata.tsv  uncertainty.cpp  uncertainty.hpp
src/new_tree_rearrangements/: Fitch_Sankoff.cpp  Fitch_Sankoff.hpp  Get_parsimony_Score_FS.cpp  Mutation_Collection.cpp  Twice_Bloom_Filter.hpp  VCF_load_tree.cpp  apply_move_patch.cpp  apply_moves.cpp  check_samples.cpp  check_samples.hpp  condense.cpp  detailed_mutations_load_store.cpp  get_sample_count.cpp  import_vcf.cpp  import_vcf.hpp  import_vcf_fast.cpp  load_store_test.cpp  main.cpp  main_helper.cpp  main_load_tree.cpp  main_save_intermediate_tree.cpp  mutation_annotated_tree.cpp  mutation_annotated_tree.hpp  mutation_annotated_tree_load_store.cpp  mutation_annotated_tree_node.cpp  optimize_tree.cpp  priority_conflict_resolver.cpp  priority_conflict_resolver.hpp  priority_conflict_resolver_cross_only.cpp  recondense_node.cpp  ref_omitted_vcf.cpp  rename_fasta.cpp  single_move_test.cpp  stack_allocator.hpp  test.cpp  test2.cpp  transcode_tree.cpp  tree_clean_test.cpp  tree_rearrangement_internal.hpp  tree_stat.cpp  (+1 more)
src/recombination/: main.cpp
src/ripples/: main.cpp
src/ripples_server/: main.cpp
src/tree_rearrangements/: Fitch_Sankoff.cpp  Fitch_Sankoff.hpp  Movable_Node_Enumerator.cpp  Move_Executor.cpp  Neighbors_Finder.cpp  Parsimony_Score_Calculator.cpp  Profitable_Move_Cacher.cpp  Profitable_Moves_Enumerator.cpp  Twice_Bloom_Filter.hpp  check_samples.cpp  check_samples.hpp  child_merger.cpp  conflict.hpp  conflicts.cpp  conflicts.hpp  get_possible_muts_at_tip.cpp  main.cpp  priority_conflict_resolver.cpp  priority_conflict_resolver.hpp  tree_rearrangement_helper.cpp  tree_rearrangement_internal.hpp  tree_rearrangements.cpp
src/usher-sampled/: Min_back_FS.cpp  check_samples.cpp  fix_par_mut.cpp  import_vcf.cpp  main.cpp  main_mapper.cpp  mapper.hpp  multiple_placement.cpp  place_sample.cpp  place_sample.hpp  place_sample_follower.cpp  place_sample_shared.cpp  sampled_mapper.cpp  sampler.cpp  testers.cpp  usher.hpp  usher_only_utils.cpp  utils.cpp  wait_debug.cpp
src/vcfSort/: main.cpp
tbb2019_20191006oss/cmake/: TBBConfig.cmake  TBBConfigVersion.cmake
tbb2019_20191006oss/lib/: libtbb.dylib  libtbb_debug.dylib  libtbb_preview.dylib  libtbb_preview_debug.dylib  libtbbmalloc.dylib  libtbbmalloc_debug.dylib  (+2 more)
test/: 09_09_20_R941_Covid2_Guppy_4.0.11_guppy_demultiplexed_barcode01.muscle.out.fasta  09_09_20_R941_Covid2_Guppy_4.0.11_guppy_demultiplexed_barcode02.muscle.out.fasta  ARTIC2UShER-Testfile_missing_data.fa  NNI-parent-of-parent.nh  NNI-parent-of-parent.vcf  combined.fa  global_samples.vcf  iupac.vcf  myAlignedSequences.fa  new_samples.vcf  same-topology-sub-optimal-state-assignment.vcf  tcga.vcf  test.nh  test.vcf  test2.nh  testBranchLen2.nwk  testBranchLen2.sh  testBranchLen2.vcf  test_merged.vcf  vcf_ref_to_fasta.pl
workflows/: README.md  Snakefile  usher.yaml
(+116 files in other folders)
